fix: Prevent Froala text box from overflowing

--- a/home/static/css/stcadmin.css
+++ b/home/static/css/stcadmin.css
@@ -385,3 +385,7 @@ th {
   flex: 0;
   flex-wrap: nowrap;
 }
+
+.fr-box {
+  overflow: hidden;
+}
